--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -9,7 +7,7 @@ services:
       - "8181:8080"
     volumes:
       - .:/app
-    command: php artisan serve --host=0.0.0.0 --port=8080
+    # command: php artisan serve --host=0.0.0.0 --port=8080
     environment:
       - APP_ENV=local
       - APP_DEBUG=true
@@ -43,11 +41,6 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
-    volumes:
-      - redisdata:/var/lib/redis
-  
+
 volumes:
   dbdata:
-  redisdata:
-
-  
