--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
 services:
   app:
     build:
-      context: .
+      context: ./docker
       dockerfile: Dockerfile
     ports:
-      - "8181:8080"
+      - "8181:8181"
     volumes:
-      - .:/app
-    # command: php artisan serve --host=0.0.0.0 --port=8080
+      - .:/var/www/html
     environment:
       - APP_ENV=local
       - APP_DEBUG=true
@@ -41,6 +40,5 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
-
 volumes:
   dbdata:
